--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | FattyHeroes</title>
+    <title>Unity WebGL Player | Bad Trip</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">FattyHeroes</div>
+        <div id="unity-build-title">Bad Trip</div>
       </div>
     </div>
     <script>
@@ -56,14 +56,14 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/FattyHeroes.loader.js";
+      var loaderUrl = buildUrl + "/BadTrip.loader.js";
       var config = {
-        dataUrl: buildUrl + "/FattyHeroes.data.unityweb",
-        frameworkUrl: buildUrl + "/FattyHeroes.framework.js.unityweb",
-        codeUrl: buildUrl + "/FattyHeroes.wasm.unityweb",
+        dataUrl: buildUrl + "/BadTrip.data.unityweb",
+        frameworkUrl: buildUrl + "/BadTrip.framework.js.unityweb",
+        codeUrl: buildUrl + "/BadTrip.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "CyberCats",
-        productName: "FattyHeroes",
+        companyName: "Cyber Cats",
+        productName: "Bad Trip",
         productVersion: "0.1",
         showBanner: unityShowBanner,
       };
